# django-nextjs-graphql

./: .dockerignore  .envrc  .gitignore  Dockerfile  README.md  package.json  pyproject.toml  shell.nix
